MaxDB for DTP: BZ https://bugs.eclipse.org/bugs/show_bug.cgi?id=219015 Remove UI dependencies from "org.eclipse.datatools.enablement.sap.maxdb" plugin.

--- a/plugins/org.eclipse.datatools.enablement.sap.maxdb.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.sap.maxdb.ui/plugin.xml
@@ -14,17 +14,6 @@
 
 <plugin>
    <extension
-         point="org.eclipse.datatools.connectivity.connectionProfile">
-      <newWizard
-            class="org.eclipse.datatools.enablement.sap.maxdb.ui.internal.ui.connection.NewMaxDBConnectionProfileWizard"
-            description="Create a MaxDB connection profile."
-            icon="icons/new_db_element.gif"
-            id="org.eclipse.datatools.enablement.sap.maxdb.ui.internal.ui.connection.NewMaxDBConnectionProfileWizard"
-            name="MaxDB"
-            profile="org.eclipse.datatools.enablement.sap.maxdb.connectionProfile">
-      </newWizard>
-   </extension>
-   <extension
          point="org.eclipse.ui.propertyPages">
       <page
             class="org.eclipse.datatools.enablement.sap.maxdb.ui.internal.ui.connection.MaxDBProfilePropertyPage"
@@ -36,6 +25,17 @@
                value="org.eclipse.datatools.enablement.sap.maxdb.connectionProfile">
          </filter>
       </page>
+   </extension>
+   <extension
+         point="org.eclipse.datatools.connectivity.connectionProfile">
+      <newWizard
+            class="org.eclipse.datatools.enablement.sap.maxdb.ui.internal.ui.connection.NewMaxDBConnectionProfileWizard"
+            description="Create a MaxDB connection profile."
+            icon="icons/new_db_element.gif"
+            id="org.eclipse.datatools.enablement.sap.maxdb.ui.internal.ui.connection.NewMaxDBConnectionProfileWizard"
+            name="MaxDB"
+            profile="org.eclipse.datatools.enablement.sap.maxdb.connectionProfile">
+      </newWizard>
    </extension>  
     <extension point="org.eclipse.datatools.connectivity.ui.driverUIContributor">
       <driverUIContributor
@@ -48,5 +48,20 @@
             driverTemplateID="org.eclipse.datatools.enablement.sap.maxdb.77.driverTemplate"
             id="org.eclipse.datatools.enablement.sap.maxdb.ui.internal.ui.connection.drivers.77.MaxDBDriverUIContributor">
       </driverUIContributor>
-   </extension> 
+   </extension>
+   <extension
+         point="org.eclipse.datatools.connectivity.ui.driverPropertyEditor">
+      <propertyEditor
+            customPropertyDescriptor="org.eclipse.datatools.connectivity.ui.PasswordTextPropertyDescriptor"
+            driverPropertyID="org.eclipse.datatools.connectivity.db.password"
+            driverTemplateID="org.eclipse.datatools.enablement.sap.maxdb.77.driverTemplate"
+            id="org.eclipse.datatools.enablement.sap.maxdb.77.driverTemplate.password">
+      </propertyEditor>
+      <propertyEditor
+            customPropertyDescriptor="org.eclipse.datatools.connectivity.ui.PasswordTextPropertyDescriptor"
+            driverPropertyID="org.eclipse.datatools.connectivity.db.password"
+            driverTemplateID="org.eclipse.datatools.enablement.sap.maxdb.76.driverTemplate"
+            id="org.eclipse.datatools.enablement.sap.maxdb.76.driverTemplate.password">
+      </propertyEditor>          
+   </extension>
 </plugin>
