--- a/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/build.xml
+++ b/plugins/org.eclipse.datatools.sqltools.sqlscrapbook/build.xml
@@ -42,6 +42,7 @@
 		<fileset dir="${eclipse.home}/plugins">
             <include name="com.ibm.icu*.jar"/>
             <include name="org.eclipse.core.*.jar"/>
+            <include name="org.eclipse.core.filebuffers_*.jar"/>
             <include name="org.eclipse.equinox.*.jar"/>
             <include name="org.eclipse.ui*.jar"/>
             <include name="org.eclipse.swt*.jar"/>
