BZ189800 - checking in new menus/handlers for DSE

--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.properties
@@ -18,17 +18,27 @@ DSE.Delete.label = D&elete
 DSE.Rename.label = Re&name
 DSE.Refresh.label = Ref&resh
 DSE.Ping.label = &Ping...
+DSE.ADDCP_m.label = N
+DSE.AddCP_nm.label = New Connection Profile
 DSE.AddCP.label = &New Connection Profile
 DSE.AddCP.tooltip = New Connection Profile
 DSE.AddRepo.label = New Connection Profile &Repository
 DSE.AddRepo.tooltip = Create a new connection profile repository
+DSE.Import_nm.label = Import
+DSE.Import_m.label = I
 DSE.Import.label = &Import
 DSE.Import.tooltip = Import
+DSE.Export_nm.label = Export
+DSE.Export_m.label = E
 DSE.Export.label = &Export
 DSE.Export.tooltip = Export
 DSE.CollapseAll.label = &Collapse All
 DSE.ExpandAll.label = &Expand All
 DSE.ExpandAll.tooltip = Expand All
+DSE.ShowCategory.command.label = Show Category
+DSE.ShowCategory.command.description = Show Category
+DSE.ShowCategory_nm.label = Show Category
+DSE.ShowCategory_m.label = S
 DSE.ShowCategory.label = &Show Category
 DSE.ShowCategory.tooltip = Show Category
 DSE.Name = Data Source Explorer
