--- a/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.ui.dse/plugin.xml
@@ -18,87 +18,6 @@
       		name="%category.name.connectivity"/>
    </extension>
    <extension
-         point="org.eclipse.ui.viewActions">
-      <viewContribution
-            targetID="org.eclipse.datatools.connectivity.DataSourceExplorerNavigator"
-            id="org.eclipse.datatools.connectivity.internal.ui.viewActions2">
-<!--         <action
-               id="org.eclipse.datatools.connectivity.internal.ui.viewactions.expandall"
-               toolbarPath="slot2"
-               hoverIcon="icons/full/clcl16/expandall.gif"
-               class="org.eclipse.datatools.connectivity.ui.dse.actions.ExpandAllActionDelegate"
-               disabledIcon="icons/full/dlcl16/expandall.gif"
-               icon="icons/full/elcl16/expandall.gif"
-               label="%DSE.ExpandAll.label"
-               menubarPath="slot2"
-               tooltip="%DSE.ExpandAll.tooltip">
-         </action>
--->
-         <action
-               class="org.eclipse.datatools.connectivity.ui.dse.actions.ShowCategoryAction"
-               hoverIcon="icons/full/clcl16/extensions.gif"
-               icon="icons/full/elcl16/extensions.gif"
-               id="org.eclipse.datatools.connectivity.internal.ui.viewactions.showcategory"
-               label="%DSE.ShowCategory.label"
-               menubarPath="slot3"
-               state="true"
-               style="toggle"
-               toolbarPath="slot3"
-               tooltip="%DSE.ShowCategory.tooltip">
-         </action>
-         <action
-               state="false"
-               style="push"
-               toolbarPath="slotn"
-               id="org.eclipse.datatools.connectivity.internal.ui.viewactions.addserver"
-               hoverIcon="icons/connection1_newwiz.gif"
-               class="org.eclipse.datatools.connectivity.ui.actions.AddProfileViewAction"
-               icon="icons/full/clcl16/add_server.gif"
-               label="%DSE.AddCP.label"
-               menubarPath="slotn"
-               tooltip="%DSE.AddCP.tooltip">
-         </action>
-         <action
-               class="org.eclipse.datatools.connectivity.ui.actions.AddRepositoryViewAction"
-               icon="icons/new_repository_action.gif"
-               id="org.eclipse.datatools.connectivity.internal.ui.viewactions.addrepository"
-               label="%DSE.AddRepo.label"
-               style="push"
-               toolbarPath="slotn"
-               tooltip="%DSE.AddRepo.tooltip">
-              <visibility>
-                 <systemProperty
-                       name="org.eclipse.datatools.connectivity.repositoriesEnabled"
-                       value="true"/>
-              </visibility>
-         </action>
-         <action
-               state="false"
-               style="push"
-               toolbarPath="slot1"
-               id="org.eclipse.datatools.connectivity.internal.ui.viewactions.export"
-               hoverIcon="icons/full/clcl16/export.gif"
-               class="org.eclipse.datatools.connectivity.ui.actions.ExportProfileViewAction"
-               icon="icons/full/clcl16/export.gif"
-               label="%DSE.Export.label"
-               menubarPath="slot1"
-               tooltip="%DSE.Export.tooltip">
-         </action>
-         <action
-               state="false"
-               style="push"
-               toolbarPath="slot1"
-               id="org.eclipse.datatools.connectivity.internal.ui.viewactions.import"
-               hoverIcon="icons/full/clcl16/import.gif"
-               class="org.eclipse.datatools.connectivity.ui.actions.ImportProfileViewAction"
-               icon="icons/full/clcl16/import.gif"
-               label="%DSE.Import.label"
-               menubarPath="slot1"
-               tooltip="%DSE.Import.tooltip">
-         </action>
-      </viewContribution>
-   </extension>
-   <extension
          point="org.eclipse.ui.decorators">
       <decorator
             location="TOP_LEFT"
@@ -310,6 +229,9 @@
       <viewerActionBinding viewerId="org.eclipse.datatools.connectivity.DataSourceExplorerNavigator">
          <includes>
             <actionExtension pattern="org.eclipse.datatools.connectivity.ui.dse.actions.*"/>
+            <actionExtension
+                  pattern="org.eclipse.datatools.connectivity.internal.ui.actions.*">
+            </actionExtension>
          </includes>
       </viewerActionBinding>
    </extension>
@@ -423,5 +345,159 @@
                 suppressedExtensionId="org.eclipse.datatools.connectivity.dsexplorer.content">
           </override>
        </navigatorContent>
+    </extension>
+    <extension
+          point="org.eclipse.ui.menus">
+       <menuContribution
+             locationURI="menu:org.eclipse.datatools.connectivity.DataSourceExplorerNavigator?before=additions">
+          <separator
+                name="slot1"
+                visible="true">
+          </separator>
+          <separator
+                name="slotOffline"
+                visible="true">
+          </separator>
+          <separator
+                name="slot2"
+                visible="true">
+          </separator>
+          <separator
+                name="slot3"
+                visible="true">
+          </separator>
+       </menuContribution>
+       <menuContribution
+             locationURI="toolbar:org.eclipse.datatools.connectivity.DataSourceExplorerNavigator">
+          <separator
+                name="separator1"
+                visible="true">
+          </separator>
+          <command
+                commandId="org.eclipse.datatools.connectivity.commands.showcategory"
+                hoverIcon="icons/full/clcl16/extensions.gif"
+                icon="icons/full/elcl16/extensions.gif"
+                id="org.eclipse.datatools.connectivity.toolbar.showcategory"
+                style="toggle"
+                tooltip="%DSE.ShowCategory.tooltip">
+          </command>
+          <separator
+                name="separator2"
+                visible="true">
+          </separator>
+          <command
+                commandId="org.eclipse.datatools.connectivity.commands.addrepository"
+                hoverIcon="icons/new_repository_action.gif"
+                icon="icons/new_repository_action.gif"
+                id="org.eclipse.datatools.connectivity.toolbar.addrepository"
+                style="push"
+                tooltip="%DSE.AddRepo.tooltip">
+             <visibleWhen>
+                <systemTest
+                      property="org.eclipse.datatools.connectivity.repositoriesEnabled"
+                      value="true">
+                </systemTest>
+             </visibleWhen>
+          </command>
+          <command
+                commandId="org.eclipse.datatools.connectivity.commands.addprofile"
+                hoverIcon="icons/connection1_newwiz.gif"
+                icon="icons/connection1_newwiz.gif"
+                id="org.eclipse.datatools.connectivity.toolbar.addprofile"
+                style="push"
+                tooltip="%DSE.AddCP.tooltip">
+             <parameter
+                   name="org.eclipse.datatools.connectivity.ui.ignoreCategory"
+                   value="true">
+             </parameter>
+             <parameter
+                   name="org.eclipse.datatools.connectivity.ui.useSelection"
+                   value="false">
+             </parameter>
+          </command>
+          <separator
+                name="separator3"
+                visible="true">
+          </separator>
+          <command
+                commandId="org.eclipse.datatools.connectivity.commands.import"
+                hoverIcon="icons/full/clcl16/import.gif"
+                icon="icons/full/clcl16/import.gif"
+                id="org.eclipse.datatools.connectivity.toolbar.import"
+                style="push"
+                tooltip="%DSE.Import.tooltip">
+          </command>
+          <command
+                commandId="org.eclipse.datatools.connectivity.commands.export"
+                hoverIcon="icons/full/clcl16/export.gif"
+                icon="icons/full/clcl16/export.gif"
+                id="org.eclipse.datatools.connectivity.toolbar.export"
+                style="push"
+                tooltip="%DSE.Export.tooltip">
+          </command>
+       </menuContribution>
+       <menuContribution
+             locationURI="menu:org.eclipse.datatools.connectivity.DataSourceExplorerNavigator?before=slot1">
+          <command
+                commandId="org.eclipse.datatools.connectivity.commands.addprofile"
+                hoverIcon="icons/connection1_newwiz.gif"
+                icon="icons/connection1_newwiz.gif"
+                id="org.eclipse.datatools.connectivity.view.menu.addprofile"
+                label="%DSE.AddCP_nm.label"
+                mnemonic="%DSE.ADDCP_m.label"
+                tooltip="%DSE.AddCP.tooltip">
+             <parameter
+                   name="org.eclipse.datatools.connectivity.ui.useSelection"
+                   value="true">
+             </parameter>
+             <parameter
+                   name="org.eclipse.datatools.connectivity.ui.ignoreCategory"
+                   value="false">
+             </parameter>
+          </command>
+       </menuContribution>
+       <menuContribution
+             locationURI="menu:org.eclipse.datatools.connectivity.DataSourceExplorerNavigator?before=slot2">
+          <command
+                commandId="org.eclipse.datatools.connectivity.commands.import"
+                hoverIcon="icons/full/clcl16/import.gif"
+                icon="icons/full/clcl16/import.gif"
+                id="org.eclipse.datatools.connectivity.view.menu.import"
+                label="%DSE.Import_nm.label"
+                mnemonic="%DSE.Import_m.label"
+                tooltip="%DSE.Import.tooltip">
+          </command>
+          <command
+                commandId="org.eclipse.datatools.connectivity.commands.export"
+                hoverIcon="icons/full/clcl16/export.gif"
+                icon="icons/full/clcl16/export.gif"
+                id="org.eclipse.datatools.connectivity.view.menu.export"
+                label="%DSE.Export_nm.label"
+                mnemonic="%DSE.Export_m.label"
+                tooltip="%DSE.Export.tooltip">
+          </command>
+       </menuContribution>
+       <menuContribution
+             locationURI="menu:org.eclipse.datatools.connectivity.DataSourceExplorerNavigator?before=slot3">
+          <command
+                commandId="org.eclipse.datatools.connectivity.commands.showcategory"
+                hoverIcon="icons/full/clcl16/extensions.gif"
+                icon="icons/full/elcl16/extensions.gif"
+                id="org.eclipse.datatools.connectivity.view.menu.showcategory"
+                label="%DSE.ShowCategory_nm.label"
+                mnemonic="%DSE.ShowCategory_m.label"
+                style="toggle"
+                tooltip="%DSE.ShowCategory.tooltip">
+          </command>
+       </menuContribution>
+    </extension>
+    <extension
+          point="org.eclipse.ui.commands">
+       <command
+             defaultHandler="org.eclipse.datatools.connectivity.ui.dse.actions.ShowCategoryAction"
+             description="%DSE.ShowCategory.command.description"
+             id="org.eclipse.datatools.connectivity.commands.showcategory"
+             name="%DSE.ShowCategory.command.label">
+       </command>
     </extension>
 </plugin>
