--- a/plugins/org.eclipse.datatools.connectivity.ui/plugin.properties
+++ b/plugins/org.eclipse.datatools.connectivity.ui/plugin.properties
@@ -25,3 +25,12 @@ drivers.preference.page.name = Driver Definitions
 category.name.connectionProfiles = Connection Profiles
 
 DSE.content = Data Source Explorer Extension
+
+AddProfile.command.label = New Connection Profile Command
+AddProfile.command.description = Command to create a new connection profile
+AddRepositoryProfile.command.label = New Repository Profile Command
+AddRepositoryProfile.command.description = Command to create a new repository profile
+ExportProfile.command.label = Export Profiles Command
+ExportProfile.command.description = Command to export connection profiles
+ImportProfile.command.label = Import Profiles Command
+ImportProfile.command.description = Command to import connection profiles
