--- a/plugins/org.eclipse.datatools.connectivity.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.connectivity.ui/plugin.xml
@@ -86,8 +86,22 @@
             class="org.eclipse.datatools.connectivity.internal.ui.ConnectionProfileActionFilter"
             id="org.eclipse.datatools.connectivity.ui"
             namespace="org.eclipse.datatools.connectivity.profile.property"
-            properties="factoryID,isConnected,maintainConnection,supportsPing,hasExtendedProperties,id,extensionID,categoryID,containingViewID,connectionState,dbVendor,dbVersion"
+            properties="factoryID,isConnected,maintainConnection,supportsPing,hasExtendedProperties,id,extensionID,categoryID,containingViewID,connectionState,dbVendor,dbVersion,repositoryIsReadOnly,canWorkOffline"
             type="org.eclipse.datatools.connectivity.IConnectionProfile"/>
+      <propertyTester
+            class="org.eclipse.datatools.connectivity.internal.ui.CategoryActionFilter"
+            id="org.eclipse.datatools.connectivity.ui.category"
+            namespace="org.eclipse.datatools.connectivity.category.property"
+            properties="categoryID,repositoryIsReadOnly"
+            type="org.eclipse.datatools.connectivity.ICategory">
+      </propertyTester>
+      <propertyTester
+            class="org.eclipse.datatools.connectivity.internal.ui.WorkbenchWindowPerspectiveActionFilter"
+            id="org.eclipse.datatools.connectivity.ui.workbench.window.perspective"
+            namespace="org.eclipse.datatools.connectivity.workbench.window.perspective.property"
+            properties="perspectiveID"
+            type="org.eclipse.ui.IWorkbenchWindow">
+      </propertyTester>
    </extension>
 
    <extension
@@ -128,7 +142,15 @@
             class="org.eclipse.datatools.connectivity.ui.actions.WorkOfflineActionProvider"
             id="org.eclipse.datatools.connectivity.internal.ui.actions.WorkOfflineActionProvider">
             <enablement>
-  	        	<instanceof value="org.eclipse.datatools.connectivity.IConnectionProfile"/>
+               <and>
+                  <instanceof
+                        value="org.eclipse.datatools.connectivity.IConnectionProfile">
+                  </instanceof>
+                  <test
+                        property="org.eclipse.datatools.connectivity.profile.property.canWorkOffline"
+                        value="true">
+                  </test>
+               </and>
          	</enablement>
       </actionProvider>
    </extension>
@@ -202,6 +224,115 @@
          <persistent
                value="true">
          </persistent>
+      </extension>
+      <extension
+            point="org.eclipse.ui.commands">
+         <command
+               description="%AddProfile.command.description"
+               id="org.eclipse.datatools.connectivity.commands.addprofile"
+               name="%AddProfile.command.label">
+            <commandParameter
+                  id="org.eclipse.datatools.connectivity.ui.ignoreCategory"
+                  name="ignoreCategory"
+                  optional="true">
+            </commandParameter>
+            <commandParameter
+                  id="org.eclipse.datatools.connectivity.ui.useSelection"
+                  name="useSelection"
+                  optional="true">
+            </commandParameter>
+         </command>
+         <command
+               defaultHandler="org.eclipse.datatools.connectivity.ui.actions.AddRepositoryViewAction"
+               description="%AddRepositoryProfile.command.description"
+               id="org.eclipse.datatools.connectivity.commands.addrepository"
+               name="%AddRepositoryProfile.command.label">
+         </command>
+         <command
+               defaultHandler="org.eclipse.datatools.connectivity.ui.actions.ExportProfileViewAction"
+               description="%ExportProfile.command.description"
+               id="org.eclipse.datatools.connectivity.commands.export"
+               name="%ExportProfile.command.label">
+         </command>
+         <command
+               defaultHandler="org.eclipse.datatools.connectivity.ui.actions.ImportProfileViewAction"
+               description="%ImportProfile.command.description"
+               id="org.eclipse.datatools.connectivity.commands.import"
+               name="%ImportProfile.command.label">
+         </command>
+      </extension>
+      <extension
+            point="org.eclipse.ui.handlers">
+         <handler
+               class="org.eclipse.datatools.connectivity.ui.actions.AddProfileViewAction"
+               commandId="org.eclipse.datatools.connectivity.commands.addprofile">
+            <enabledWhen>
+               <or>
+                  <with
+                        variable="selection">
+                     <count
+                           value="0">
+                     </count>
+                  </with>
+                  <with
+                        variable="selection">
+                     <count
+                           value="+">
+                     </count>
+                     <iterate>
+                        <instanceof
+                              value="org.eclipse.datatools.connectivity.internal.ui.LocalRepositoryNode">
+                        </instanceof>
+                     </iterate>
+                  </with>
+                  <not>
+                     <and>
+                        <count
+                              value="+">
+                        </count>
+                        <or>
+                           <with
+                                 variable="selection">
+                              <iterate>
+                                 <instanceof
+                                       value="org.eclipse.datatools.connectivity.IConnectionProfile">
+                                 </instanceof>
+                                 <test
+                                       property="org.eclipse.datatools.connectivity.profile.property.repositoryIsReadOnly"
+                                       value="true">
+                                 </test>
+                              </iterate>
+                           </with>
+                           <with
+                                 variable="selection">
+                              <iterate>
+                                 <instanceof
+                                       value="org.eclipse.datatools.connectivity.ICategory">
+                                 </instanceof>
+                                 <test
+                                       property="org.eclipse.datatools.connectivity.category.property.repositoryIsReadOnly"
+                                       value="true">
+                                 </test>
+                              </iterate>
+                           </with>
+                           <with
+                                 variable="selection">
+                              <iterate>
+                                 <instanceof
+                                       value="org.eclipse.datatools.connectivity.internal.repository.IConnectionProfileRepository">
+                                 </instanceof>
+                                 <test
+                                       property="org.eclipse.datatools.connectivity.repository.property.repositoryIsReadOnly"
+                                       value="true">
+                                 </test>
+                              </iterate>
+                           </with>
+                        </or>
+                     </and>
+                  </not>
+               </or>
+            </enabledWhen>
+         </handler>
       </extension>
 
 </plugin>
