[189800] Updated ODA Sample db profile data source to override ui.handler in DSE

--- a/examples/org.eclipse.datatools.connectivity.oda.jdbc.dbprofile.sample.ui/plugin.properties
+++ b/examples/org.eclipse.datatools.connectivity.oda.jdbc.dbprofile.sample.ui/plugin.properties
@@ -12,6 +12,7 @@
 # Plug-in Configuration
 #
 oda.data.source.id=org.eclipse.datatools.connectivity.oda.jdbc.dbprofile.sample
+parent.category.id=org.eclipse.datatools.connectivity.db.category
 #
 ###############################################################################
 # NLS strings
