--- a/examples/org.eclipse.datatools.connectivity.oda.jdbc.dbprofile.sample.ui/plugin.xml
+++ b/examples/org.eclipse.datatools.connectivity.oda.jdbc.dbprofile.sample.ui/plugin.xml
@@ -110,11 +110,88 @@
                </instanceof>
                <test
                      property="org.eclipse.datatools.connectivity.category.property.categoryID"
-                     value="org.eclipse.datatools.connectivity.db.category">
+                     value="%parent.category.id">
                </test>
             </and>
          </enablement>
       </actionProvider>
+   </extension>
+   <extension
+         point="org.eclipse.ui.handlers">
+    <handler
+            class="org.eclipse.datatools.connectivity.oda.jdbc.dbprofile.sample.ui.filter.AddDbProfileViewAction"
+            commandId="org.eclipse.datatools.connectivity.commands.addprofile">
+     <enabledWhen>
+      <or>
+       <with
+          variable="selection">
+          <count
+             value="0">
+          </count>
+       </with>
+	   <with variable="selection">
+	      <count value="+" />
+	      <iterate>
+	       <or>
+            <and>
+              <instanceof
+                    value="org.eclipse.datatools.connectivity.ICategory">
+              </instanceof>
+              <test
+                    property="org.eclipse.datatools.connectivity.category.property.categoryID"
+                    value="%parent.category.id">
+              </test>
+            </and>
+            <and>
+               <instanceof
+                     value="org.eclipse.datatools.connectivity.IConnectionProfile">
+               </instanceof>
+               <test
+                     property="org.eclipse.datatools.connectivity.profile.property.categoryID"
+                     value="%parent.category.id">
+               </test>
+            </and>
+           </or>
+	      </iterate>
+	   </with>
+	  </or>
+     </enabledWhen>
+     <activeWhen>
+      <or>
+       <with
+          variable="selection">
+          <count
+             value="0">
+          </count>
+       </with>
+	   <with variable="selection">
+	      <count value="+" />
+	      <iterate>
+	       <or>
+            <and>
+              <instanceof
+                    value="org.eclipse.datatools.connectivity.ICategory">
+              </instanceof>
+              <test
+                    property="org.eclipse.datatools.connectivity.category.property.categoryID"
+                    value="%parent.category.id">
+              </test>
+            </and>
+            <and>
+               <instanceof
+                     value="org.eclipse.datatools.connectivity.IConnectionProfile">
+               </instanceof>
+               <test
+                     property="org.eclipse.datatools.connectivity.profile.property.categoryID"
+                     value="%parent.category.id">
+               </test>
+            </and>
+	       </or>
+	      </iterate>
+	   </with>
+	  </or>
+     </activeWhen>
+    </handler>
    </extension>
 
 </plugin>
