--- a/plugins/org.eclipse.datatools.enablement.jdt.classpath/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.jdt.classpath/build.properties
@@ -12,13 +12,4 @@ javac.source =		1.4
 javac.target =		1.4
 source.. = src/
 output.. = bin/
-src.includes = .classpath,\
-               .project,\
-               .settings/,\
-               META-INF/,\
-               about.html,\
-               build.properties,\
-               build.xml,\
-               plugin.properties,\
-               plugin.xml,\
-               src/
+src.includes = about.html
