[BZ217403] Update build.properties to select about.html in source build; update ODA build.properties and remove obsolete build scripts.

--- a/plugins/org.eclipse.datatools.enablement.oda.ws.ui/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ws.ui/build.properties
@@ -18,3 +18,4 @@ bin.includes = plugin.xml,\
                icons/,\
                about.html,\
                about_files/
+src.includes = build.properties
