--- a/plugins/org.eclipse.datatools.enablement.oda.ws/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.ws/build.properties
@@ -17,3 +17,4 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                about.html,\
                about_files/
+src.includes = about.html
