--- a/plugins/org.eclipse.datatools.enablement.oda.xml.ui/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml.ui/build.properties
@@ -1,16 +1,3 @@
-#
-#*************************************************************************
-# Copyright (c) 2006 Actuate Corporation.
-# All rights reserved. This program and the accompanying materials
-# are made available under the terms of the Eclipse Public License v1.0
-# which accompanies this distribution, and is available at
-# http://www.eclipse.org/legal/epl-v10.html
-#
-# Contributors:
-#  Actuate Corporation - initial API and implementation
-#  
-#*************************************************************************
-#
 source.. = src/
 output.. = bin/
 bin.includes = plugin.xml,\
@@ -18,5 +5,11 @@ bin.includes = plugin.xml,\
                about.html,\
                icons/,\
                META-INF/,\
-               plugin.properties
+               plugin.properties,\
+               about.ini,\
+               about.mappings,\
+               about.properties,\
+               eclipse32.gif,\
+               eclipse32.png
 download.dir =           ./download/
+src.includes = about.html
