--- a/plugins/org.eclipse.datatools.enablement.oda.xml/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.oda.xml/build.properties
@@ -1,28 +1,15 @@
-#
-#*************************************************************************
-# Copyright (c) 2004, 2007 Actuate Corporation.
-# All rights reserved. This program and the accompanying materials
-# are made available under the terms of the Eclipse Public License v1.0
-# which accompanies this distribution, and is available at
-# http://www.eclipse.org/legal/epl-v10.html
-#
-# Contributors:
-#  Actuate Corporation - initial API and implementation
-#  
-#*************************************************************************
-#
-# $Id: build.properties,v 1.1 2007/06/25 16:33:27 jgraham Exp $
-#
 bin.includes = about.html,\
                plugin.xml,\
                META-INF/,\
                .,\
                plugin.properties,\
-               about_files/
+               about_files/,\
+               about.ini,\
+               about.mappings,\
+               about.properties,\
+               eclipse32.gif,\
+               eclipse32.png
 download.dir =           ./download/
 source.. = src/
 output.. = bin/
-
-# required for PDE build
-javacSource = 1.4
-javacTarget = 1.4
+src.includes = about.html
