--- a/plugins/org.eclipse.datatools.enablement.hsqldb/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.hsqldb/build.properties
@@ -15,4 +15,5 @@ javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
 javac.target =		1.4
+src.includes = about.html
                
