[BZ217403] Update build.properties to select about.html in source build; update ODA build.properties and remove obsolete build scripts.

--- a/plugins/org.eclipse.datatools.enablement.sybase.asa/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.asa/build.properties
@@ -10,3 +10,4 @@ bin.includes = META-INF/,\
                .settings/
 jars.compile.order = .
 plugin.version =	1.0.0.200706071
+src.includes = about.html
