--- a/plugins/org.eclipse.datatools.enablement.sybase/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase/build.properties
@@ -15,3 +15,4 @@ bin.includes = META-INF/,\
                eclipse32.png
 jars.compile.order = .
 plugin.version =	1.0.1.200707131
+src.includes = about.html
