--- a/plugins/org.eclipse.datatools.enablement.sybase.asa.models/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.sybase.asa.models/build.properties
@@ -1,7 +1,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.3 2007/06/07 16:10:51 jgraham Exp $
+# $Id: build.properties,v 1.4 2007/10/18 16:19:14 jgraham Exp $
 
 bin.includes = META-INF/,\
                .,\
@@ -13,3 +13,4 @@ jars.compile.order = .
 source.. = src/
 output.. = bin/
 plugin.version =	1.0.0.200706071
+src.includes = about.html
