--- a/plugins/org.eclipse.datatools.oda.cshelp/build.properties
+++ b/plugins/org.eclipse.datatools.oda.cshelp/build.properties
@@ -7,3 +7,4 @@ bin.includes = plugin.properties,\
                about.ini,\
                about.mappings,\
                about.properties
+src.includes = about.html
