--- a/plugins/org.eclipse.datatools.modelbase.sql.edit/build.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql.edit/build.properties
@@ -3,7 +3,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.11 2007/03/23 15:55:45 jgraham Exp $
+# $Id: build.properties,v 1.12 2007/06/07 16:11:51 jgraham Exp $
 #
 ##################################################################
 source.. = src/
@@ -21,3 +21,4 @@ javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
 javac.target =		1.4
+src.includes = about.html
