--- a/plugins/org.eclipse.datatools.modelbase.sql.query.edit/build.properties
+++ b/plugins/org.eclipse.datatools.modelbase.sql.query.edit/build.properties
@@ -1,7 +1,7 @@
 # <copyright>
 # </copyright>
 #
-# $Id: build.properties,v 1.2 2008/01/31 02:58:42 bpayton Exp $
+# $Id: build.properties,v 1.3 2008/02/01 21:32:03 bpayton Exp $
 
 bin.includes = icons/,\
                META-INF/,\
@@ -12,3 +12,4 @@ bin.includes = icons/,\
 jars.compile.order = .
 source.. = src/
 output.. = bin/
+src.includes = about.html
