--- a/plugins/org.eclipse.datatools.enablement.mysql.ui/build.properties
+++ b/plugins/org.eclipse.datatools.enablement.mysql.ui/build.properties
@@ -23,4 +23,5 @@ javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
 javac.target =		1.4
+src.includes = about.html
                
