--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/build.properties
@@ -1,18 +1,3 @@
-#
-#*************************************************************************
-# Copyright (c) 2004, 2007 Actuate Corporation.
-# All rights reserved. This program and the accompanying materials
-# are made available under the terms of the Eclipse Public License v1.0
-# which accompanies this distribution, and is available at
-# http://www.eclipse.org/legal/epl-v10.html
-#
-# Contributors:
-#  Actuate Corporation - initial API and implementation
-#  
-#*************************************************************************
-#
-# $Id: build.properties,v 1.1 2007/06/25 16:31:05 jgraham Exp $
-#
 bin.includes = about.html,\
                plugin.xml,\
                META-INF/,\
@@ -21,7 +6,4 @@ bin.includes = about.html,\
 download.dir =           ./download/
 source.. = src/
 output.. = bin/
-
-# required for PDE build
-javacSource = 1.4
-javacTarget = 1.4
+src.includes = about.html
