[BZ217403] Update build.properties to select about.html in source build; update ODA build.properties and remove obsolete build scripts.

--- a/plugins/org.eclipse.datatools.connectivity.oda.consumer/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.consumer/build.properties
@@ -1,37 +1,14 @@
-#
-#************************************************************************
-# Copyright (c) 2004, 2007 Actuate Corporation.
-# All rights reserved. This program and the accompanying materials
-# are made available under the terms of the Eclipse Public License v1.0
-# which accompanies this distribution, and is available at
-# http://www.eclipse.org/legal/epl-v10.html
-#
-# Contributors:
-#  Actuate Corporation - initial API and implementation
-#  
-#************************************************************************
-#
-package.odaconsumer.dir = ./org/eclipse/datatools/connectivity/oda/consumer/
 source.. = src/
 output.. = bin/
-jar.includes =           **/*.txt,\
-                         **/*.xml,\
-                         **/*.def,\
-                         **/*.properties
 bin.includes = META-INF/,\
                about.html,\
                plugin.xml,\
                .,\
-               schema/*.exsd
-javac.debug =            on
+               schema/
 javac.source =           1.4
 javac.target =           1.4
-build.result.dir =	 	 ./
-temp.dir =		         ./tempdir/
-plugin.destination =     ./
-javadoc.dir =            doc/api/
-download.dir =           ./download/
+javadoc.dir =  doc/api/
+download.dir = ./download/
+src.includes = about.html
 
-# required for PDE build
-javacSource = 1.4
-javacTarget = 1.4
+
