--- a/plugins/org.eclipse.datatools.connectivity.oda/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda/build.properties
@@ -1,39 +1,17 @@
-#
-#************************************************************************
-# Copyright (c) 2004, 2007 Actuate Corporation.
-# All rights reserved. This program and the accompanying materials
-# are made available under the terms of the Eclipse Public License v1.0
-# which accompanies this distribution, and is available at
-# http://www.eclipse.org/legal/epl-v10.html
-#
-# Contributors:
-#  Actuate Corporation - initial API and implementation
-#  
-#************************************************************************
-#
 source.. = src/
 output.. = bin/
-package.oda.jar =        ./org/eclipse/datatools/connectivity/oda/
-oda.src.dir =         	 ./src/org/eclipse/datatools/connectivity/oda/
 bin.includes = about.html,\
                plugin.xml,\
                .,\
-               schema/datasource.exsd,\
-               META-INF/
-jar.includes =           **/*.txt,\
-                         **/*.xml,\
-                         **/*.def,\
-                         **/*.properties
-javac.debug =            on
-javac.source =           1.4
-javac.target =           1.4
-
-# required for PDE build
-javacSource = 1.4
-javacTarget = 1.4
-
-build.result.dir =	 	 ./
-temp.dir =		         ./tempdir/
-plugin.destination =     ./
-javadoc.dir =            doc/api/
-download.dir =           ./download/
+               META-INF/,\
+               about.ini,\
+               about.mappings,\
+               about.properties,\
+               eclipse32.gif,\
+               eclipse32.png,\
+               schema/
+javac.source = 1.4
+javac.target = 1.4
+javadoc.dir = doc/api/
+download.dir = ./download/
+src.includes = about.html
