--- a/plugins/org.eclipse.datatools.connectivity.oda.design.ui/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design.ui/build.properties
@@ -1,36 +1,18 @@
-#
-#*************************************************************************
-# Copyright (c) 2004, 2006 Actuate Corporation.
-# All rights reserved. This program and the accompanying materials
-# are made available under the terms of the Eclipse Public License v1.0
-# which accompanies this distribution, and is available at
-# http://www.eclipse.org/legal/epl-v10.html
-#
-# Contributors:
-#  Actuate Corporation - initial API and implementation
-#  
-#*************************************************************************
-#
 source.. = src/
 output.. = bin/
 bin.includes = plugin.xml,\
                .,\
                about.html,\
-               schema/datasource.exsd,\
                META-INF/,\
-               plugin.properties
-package.odadesignui.jar = ./org/eclipse/datatools/connectivity/oda/design/ui/
-odadesignui.src.dir =     ./src/org/eclipse/datatools/connectivity/oda/design/ui/
-jar.includes =           **/*.txt,\
-                         **/*.xml,\
-                         **/*.def,\
-                         **/*.properties
-javac.debug =            on
+               plugin.properties,\
+               about.ini,\
+               about.mappings,\
+               about.properties,\
+               eclipse32.gif,\
+               eclipse32.png,\
+               schema/
 javac.source =           1.4
 javac.target =           1.4
-build.result.dir =	 	 ./
-temp.dir =		         ./tempdir/
-plugin.destination =     ./
 javadoc.dir =            doc/api/
 download.dir =           ./download/
-custom = true
+src.includes = about.html
