--- a/plugins/org.eclipse.datatools.connectivity.oda.design/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design/build.properties
@@ -1,40 +1,13 @@
-#
-#*************************************************************************
-# Copyright (c) 2004, 2006 Actuate Corporation.
-# All rights reserved. This program and the accompanying materials
-# are made available under the terms of the Eclipse Public License v1.0
-# which accompanies this distribution, and is available at
-# http://www.eclipse.org/legal/epl-v10.html
-#
-# Contributors:
-#  Actuate Corporation - initial API and implementation
-#  
-#*************************************************************************
-#
-# $Id: build.properties,v 1.7 2006/04/14 07:16:49 lchan Exp $
-#
 bin.includes = plugin.xml,\
                .,\
                about.html,\
                META-INF/,\
                plugin.properties
-package.odadesign.jar = ./org/eclipse/datatools/connectivity/oda/design/
-odadesign.src.dir =     ./src/org/eclipse/datatools/connectivity/oda/design/
-jar.includes =           **/*.txt,\
-                         **/*.xml,\
-                         **/*.def,\
-                         **/*.properties
-javac.debug =            on
 javac.source =           1.4
 javac.target =           1.4
 build.result.dir =	 	 ./
-temp.dir =		         ./tempdir/
-plugin.destination =     ./
 javadoc.dir =            doc/api/
 download.dir =           ./download/
 source.. = src/
 output.. = bin/
-
-# required for PDE build
-javacSource = 1.4
-javacTarget = 1.4
+src.includes = about.html
