--- a/plugins/org.eclipse.datatools.connectivity.oda.profile/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.profile/build.properties
@@ -1,16 +1,3 @@
-#
-#*************************************************************************
-# Copyright (c) 2004, 2007 Actuate Corporation.
-# All rights reserved. This program and the accompanying materials
-# are made available under the terms of the Eclipse Public License v1.0
-# which accompanies this distribution, and is available at
-# http://www.eclipse.org/legal/epl-v10.html
-#
-# Contributors:
-#  Actuate Corporation - initial API and implementation
-#  
-#*************************************************************************
-#
 source.. = src/
 output.. = bin/
 bin.includes = plugin.xml,\
@@ -18,21 +5,8 @@ bin.includes = plugin.xml,\
                .,\
                about.html,\
                META-INF/
-package.odaprofile.jar = ./org/eclipse/datatools/connectivity/oda/profile/
-odaprofile.src.dir =     ./src/org/eclipse/datatools/connectivity/oda/profile/
-jar.includes =           **/*.txt,\
-                         **/*.xml,\
-                         **/*.def,\
-                         **/*.properties
-javac.debug =            on
 javac.source =           1.4
 javac.target =           1.4
-build.result.dir =	 	 ./
-temp.dir =		         ./tempdir/
-plugin.destination =     ./
 javadoc.dir =            doc/api/
 download.dir =           ./download/
-
-# required for PDE build
-javacSource = 1.4
-javacTarget = 1.4
+src.includes = about.html
