--- a/plugins/org.eclipse.datatools.connectivity.oda.template.ui/build.properties
+++ b/plugins/org.eclipse.datatools.connectivity.oda.template.ui/build.properties
@@ -1,16 +1,3 @@
-#
-#************************************************************************
-# Copyright (c) 2006 Actuate Corporation.
-# All rights reserved. This program and the accompanying materials
-# are made available under the terms of the Eclipse Public License v1.0
-# which accompanies this distribution, and is available at
-# http://www.eclipse.org/legal/epl-v10.html
-#
-# Contributors:
-#  Actuate Corporation - initial API and implementation
-#  
-#************************************************************************
-#
 source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
@@ -20,17 +7,8 @@ bin.includes = META-INF/,\
                templates_oda_3.0/,\
                about.html,\
                icons/
-package.odatemplateui.jar = ./org/eclipse/datatools/connectivity/oda/template/ui/
-odatemplateui.src.dir =     ./src/org/eclipse/datatools/connectivity/oda/template/ui/
-jar.includes =           **/*.txt,\
-                         **/*.xml,\
-                         **/*.def,\
-                         **/*.properties
-javac.debug =            on
 javac.source =           1.4
 javac.target =           1.4
-build.result.dir =	 	 ./
-temp.dir =		         ./tempdir/
-plugin.destination =     ./
 download.dir =           ./download/
+src.includes = about.html
                
