[BZ217403] Update build.properties to select about.html in source build; update ODA build.properties and remove obsolete build scripts.

--- a/plugins/org.eclipse.datatools.sqltools.ddlgen.ui/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.ddlgen.ui/build.properties
@@ -7,3 +7,4 @@ bin.includes = plugin.xml,\
                about.html,\
                META-INF/
 plugin.version = 1.0.0.200706071
+src.includes = about.html
