--- a/plugins/org.eclipse.datatools.sqltools.parsers.sql.lexer/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.parsers.sql.lexer/build.properties
@@ -4,9 +4,6 @@ bin.includes = plugin.xml,\
                .,\
                META-INF/,\
                about.html
-src.includes = src/,\
-               .classpath,\
-               build.properties
 
 src.dir = src/
 plugin.version = 1.0.0.200706161
@@ -14,4 +11,5 @@ javadoc.dir = doc/api/
 download.dir = ./download/
 javac.source = 1.4
 javac.target = 1.4
+src.includes = about.html
  
