--- a/plugins/org.eclipse.datatools.sqltools.parsers.sql.query/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.parsers.sql.query/build.properties
@@ -6,10 +6,6 @@ bin.includes = plugin.xml,\
                schema/,\
                META-INF/,\
                about.html
-src.includes = src/,\
-               .classpath,\
-               templates/,\
-               build.properties
                            
 src.dir =		src/
 plugin.version =	1.0.0.200706162
@@ -17,3 +13,4 @@ javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
 javac.target =		1.4
+src.includes = about.html
