--- a/plugins/org.eclipse.datatools.sqltools.parsers.sql.xml.query/build.properties
+++ b/plugins/org.eclipse.datatools.sqltools.parsers.sql.xml.query/build.properties
@@ -5,9 +5,6 @@ bin.includes = plugin.xml,\
                META-INF/,\
                about.html,\
                plugin.properties
-src.includes = src/,\
-               .classpath,\
-               build.properties
 
 src.dir =		src/
 plugin.version =	1.0.0.200706151
@@ -15,3 +12,4 @@ javadoc.dir =		doc/api/
 download.dir =		./download/
 javac.source =		1.4
 javac.target =		1.4
+src.includes = about.html
