[218063]  Need to add vendor doc and support for Oracle 11

--- a/plugins/org.eclipse.datatools.enablement.oracle.dbdefinition/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.oracle.dbdefinition/plugin.xml
@@ -5,6 +5,13 @@
    <extension
          point="org.eclipse.datatools.connectivity.sqm.core.databaseDefinition">
       <definition
+            version="11"
+            product="Oracle"
+            productDisplayString="%11ProductString"
+            versionDisplayString="%11VersionString"
+            file="runtime/vendors/Oracle_11/Oracle_11.xmi">
+      </definition>
+      <definition
             version="10"
             product="Oracle"
             productDisplayString="%10ProductString"
