--- a/plugins/org.eclipse.datatools.enablement.oracle.ui/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.oracle.ui/plugin.xml
@@ -28,6 +28,12 @@
       <propertyEditor
             customPropertyDescriptor="org.eclipse.datatools.connectivity.ui.PasswordTextPropertyDescriptor"
             driverPropertyID="org.eclipse.datatools.connectivity.db.password"
+            driverTemplateID="org.eclipse.datatools.enablement.oracle.11.driverTemplate"
+            id="org.eclipse.datatools.enablement.oracle.11.driverTemplate.password">
+      </propertyEditor>
+      <propertyEditor
+            customPropertyDescriptor="org.eclipse.datatools.connectivity.ui.PasswordTextPropertyDescriptor"
+            driverPropertyID="org.eclipse.datatools.connectivity.db.password"
             driverTemplateID="org.eclipse.datatools.enablement.oracle.10.driverTemplate"
             id="org.eclipse.datatools.enablement.oracle.10.driverTemplate.password">
       </propertyEditor>
@@ -42,6 +48,12 @@
             driverPropertyID="org.eclipse.datatools.connectivity.db.password"
             driverTemplateID="org.eclipse.datatools.enablement.oracle.8.driverTemplate"
             id="org.eclipse.datatools.enablement.oracle.8.driverTemplate.password">
+      </propertyEditor>
+      <propertyEditor
+            customPropertyDescriptor="org.eclipse.datatools.connectivity.ui.PasswordTextPropertyDescriptor"
+            driverPropertyID="org.eclipse.datatools.connectivity.db.password"
+            driverTemplateID="org.eclipse.datatools.enablement.oracle.11.other.driverTemplate"
+            id="org.eclipse.datatools.enablement.oracle.11.other.driverTemplate.password">
       </propertyEditor>
       <propertyEditor
             customPropertyDescriptor="org.eclipse.datatools.connectivity.ui.PasswordTextPropertyDescriptor"
@@ -66,6 +78,14 @@
    <extension point="org.eclipse.datatools.connectivity.ui.driverUIContributor">
       <driverUIContributor
             class="org.eclipse.datatools.enablement.oracle.internal.ui.drivers.OracleOtherDriverUIContributor"
+            driverTemplateID="org.eclipse.datatools.enablement.oracle.11.other.driverTemplate"
+            id="org.eclipse.datatools.enablement.oracle.internal.ui.drivers.11.OracleOtherDriverUIContributor">
+      </driverUIContributor>
+   </extension>
+   
+   <extension point="org.eclipse.datatools.connectivity.ui.driverUIContributor">
+      <driverUIContributor
+            class="org.eclipse.datatools.enablement.oracle.internal.ui.drivers.OracleOtherDriverUIContributor"
             driverTemplateID="org.eclipse.datatools.enablement.oracle.10.other.driverTemplate"
             id="org.eclipse.datatools.enablement.oracle.internal.ui.drivers.10.OracleOtherDriverUIContributor">
       </driverUIContributor>
@@ -84,6 +104,14 @@
             class="org.eclipse.datatools.enablement.oracle.internal.ui.drivers.OracleOtherDriverUIContributor"
             driverTemplateID="org.eclipse.datatools.enablement.oracle.8.other.driverTemplate"
             id="org.eclipse.datatools.enablement.oracle.internal.ui.drivers.8.OracleOtherDriverUIContributor">
+      </driverUIContributor>
+   </extension>
+   
+   <extension point="org.eclipse.datatools.connectivity.ui.driverUIContributor">
+      <driverUIContributor
+            class="org.eclipse.datatools.enablement.oracle.internal.ui.drivers.OracleThinDriverUIContributor"
+            driverTemplateID="org.eclipse.datatools.enablement.oracle.11.driverTemplate"
+            id="org.eclipse.datatools.enablement.oracle.internal.ui.drivers.11.OracleThinDriverUIContributor">
       </driverUIContributor>
    </extension>
    
