--- a/plugins/org.eclipse.datatools.enablement.oracle/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.oracle/plugin.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2006, 2007 IBM Corporation and others.
+# Copyright (c) 2006 - 2008 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -21,13 +21,16 @@ driverUID = User ID
 driverPWD = Password
 
 ORACLE_CATEGORY_NAME = Oracle
+11_VERSION_CATEGORY_NAME = 11
 10_VERSION_CATEGORY_NAME = 10
 9_VERSION_CATEGORY_NAME = 9
 8_VERSION_CATEGORY_NAME = 8
 
+org.eclipse.datatools.enablement.oracle.11.driverTemplate = Oracle Thin Driver
 org.eclipse.datatools.enablement.oracle.10.driverTemplate = Oracle Thin Driver
 org.eclipse.datatools.enablement.oracle.9.driverTemplate = Oracle Thin Driver
 org.eclipse.datatools.enablement.oracle.8.driverTemplate = Oracle Thin Driver
+org.eclipse.datatools.enablement.oracle.11.other.driverTemplate = Other Driver
 org.eclipse.datatools.enablement.oracle.10.other.driverTemplate = Other Driver
 org.eclipse.datatools.enablement.oracle.9.other.driverTemplate = Other Driver
 org.eclipse.datatools.enablement.oracle.8.other.driverTemplate = Other Driver
