--- a/plugins/org.eclipse.datatools.enablement.oracle/plugin.xml
+++ b/plugins/org.eclipse.datatools.enablement.oracle/plugin.xml
@@ -26,6 +26,10 @@
             name="%ORACLE_CATEGORY_NAME"/>
          <category
       		parentCategory="org.eclipse.datatools.enablement.oracle.driverCategory"
+            id="org.eclipse.datatools.enablement.oracle.11.driverCategory"
+            name="%11_VERSION_CATEGORY_NAME"/>
+         <category
+      		parentCategory="org.eclipse.datatools.enablement.oracle.driverCategory"
             id="org.eclipse.datatools.enablement.oracle.10.driverCategory"
             name="%10_VERSION_CATEGORY_NAME"/> 
          <category
@@ -87,6 +91,75 @@
                 value="USER" 
                 required="false" 
                 visible="true"/>     
+          <property 
+                generated="false" 
+                id="org.eclipse.datatools.connectivity.db.username" 
+                name="%driverUID" 
+                value="" 
+                required="false" 
+                visible="true"/> 
+          <property
+                generated="false"
+                id="org.eclipse.datatools.connectivity.db.password"
+                name="%driverPWD"
+                required="false"
+                visible="true"/> 
+       </properties> 
+    </driverTemplate> 
+   </extension>
+   
+   <extension
+         point="org.eclipse.datatools.connectivity.driverExtension">    
+    <driverTemplate 
+          createDefault="false" 
+          emptyJarListIsOK="false" 
+          id="org.eclipse.datatools.enablement.oracle.11.driverTemplate" 
+          jarList="ojdbc14.jar" 
+          name="%org.eclipse.datatools.enablement.oracle.11.driverTemplate" 
+          parentCategory="org.eclipse.datatools.enablement.oracle.11.driverCategory" > 
+       <properties> 
+          <property 
+                generated="false" 
+                id="org.eclipse.datatools.connectivity.db.driverClass" 
+                name="%driverClass" 
+                value="oracle.jdbc.OracleDriver" 
+                required="true" 
+                visible="true"/> 
+          <property 
+                generated="false" 
+                id="org.eclipse.datatools.connectivity.db.vendor" 
+                name="%driverVendor" 
+                value="Oracle" 
+                required="true" 
+                visible="false"/> 
+          <property 
+                generated="false" 
+                id="org.eclipse.datatools.connectivity.db.version" 
+                name="%driverVersion" 
+                value="11" 
+                required="true" 
+                visible="false"/>   
+          <property 
+                generated="false" 
+                id="org.eclipse.datatools.connectivity.db.databaseName" 
+                name="%driverDBName" 
+                value="db" 
+                required="true" 
+                visible="true"/>                             
+          <property 
+                generated="false" 
+                id="org.eclipse.datatools.connectivity.db.URL" 
+                name="%driverConnectionURL" 
+                value="jdbc:oracle:thin:@server:1521:db" 
+                required="true" 
+                visible="true"/> 
+          <property 
+                generated="false" 
+                id="org.eclipse.datatools.enablement.oracle.catalogType" 
+                name="%catalogType" 
+                value="USER" 
+                required="false" 
+                visible="true"/> 
           <property 
                 generated="false" 
                 id="org.eclipse.datatools.connectivity.db.username" 
@@ -216,6 +289,75 @@
                 id="org.eclipse.datatools.connectivity.db.URL" 
                 name="%driverConnectionURL" 
                 value="jdbc:oracle:thin:@server:1521:db" 
+                required="true" 
+                visible="true"/> 
+          <property 
+                generated="false" 
+                id="org.eclipse.datatools.enablement.oracle.catalogType" 
+                name="%catalogType" 
+                value="USER" 
+                required="false" 
+                visible="true"/> 
+          <property 
+                generated="false" 
+                id="org.eclipse.datatools.connectivity.db.username" 
+                name="%driverUID" 
+                value="" 
+                required="false" 
+                visible="true"/> 
+          <property
+                generated="false"
+                id="org.eclipse.datatools.connectivity.db.password"
+                name="%driverPWD"
+                required="false"
+                visible="true"/> 
+       </properties> 
+    </driverTemplate> 
+   </extension>
+   
+   <extension
+         point="org.eclipse.datatools.connectivity.driverExtension">    
+    <driverTemplate 
+          createDefault="false" 
+          emptyJarListIsOK="false" 
+          id="org.eclipse.datatools.enablement.oracle.11.other.driverTemplate" 
+          jarList="" 
+          name="%org.eclipse.datatools.enablement.oracle.11.other.driverTemplate" 
+          parentCategory="org.eclipse.datatools.enablement.oracle.11.driverCategory" > 
+       <properties> 
+          <property 
+                generated="false" 
+                id="org.eclipse.datatools.connectivity.db.driverClass" 
+                name="%driverClass" 
+                value="" 
+                required="true" 
+                visible="true"/> 
+          <property 
+                generated="false" 
+                id="org.eclipse.datatools.connectivity.db.vendor" 
+                name="%driverVendor" 
+                value="Oracle" 
+                required="true" 
+                visible="false"/> 
+          <property 
+                generated="false" 
+                id="org.eclipse.datatools.connectivity.db.version" 
+                name="%driverVersion" 
+                value="11" 
+                required="true" 
+                visible="false"/>   
+          <property 
+                generated="false" 
+                id="org.eclipse.datatools.connectivity.db.databaseName" 
+                name="%driverDBName" 
+                value="" 
+                required="true" 
+                visible="true"/>                             
+          <property 
+                generated="false" 
+                id="org.eclipse.datatools.connectivity.db.URL" 
+                name="%driverConnectionURL" 
+                value="" 
                 required="true" 
                 visible="true"/> 
           <property 
