--- a/plugins/org.eclipse.datatools.enablement.sap.maxdb/plugin.properties
+++ b/plugins/org.eclipse.datatools.enablement.sap.maxdb/plugin.properties
@@ -1,10 +1,8 @@
 pluginName=Eclipse Data Tools Platform MaxDB Enablement Plug-in
 providerName=Eclipse.org
 
-ProductString = MaxDB
-VersionString = 7.6
-Vendor = Vendor
-Version = Version 
+vendor = Vendor
+version = Version 
 
 driver = MaxDB JDBC Driver
 category = MaxDB
@@ -13,3 +11,12 @@ instance_name = Instance Name
 driver_class = Driver Class
 user_id = User ID
 password = Password
+
+profile.maxdb.title = MaxDB Profile
+jdbc.connection.name = MaxDB JDBC Factory
+
+MaxDBName=MaxDB
+
+7_6_category_name = 7.6
+7_7_category_name = 7.7
+            
